# RootsMagicUtilities

./: .gitignore  CMakeLists.txt  FileTypeDiscovery.ps1  IncompatibleImageConvert.ps1  README.md  RootsMagicHuskeyPeopleToDigiKamTags.ps1  RootsMagicHuskeySyncToDigiKamTags.ps1  RootsMagicKennedyPeopleToDigiKamTags.ps1  add_sqlite_to_path.ps1  build_and_deploy.ps1  download_sqlite.ps1
include/: rootsmagicimporter.h  rootsmagicsync.h
src/: CMakeLists.txt  main.cpp  rootsmagicimporter.cpp  rootsmagicsync.cpp  rootsmagicsync_main.cpp
